--- a/style.css
+++ b/style.css
@@ -1,19 +1,32 @@
 * {
     font-family: 'Poppins', sans-serif;
-    padding: 0 30px;
-    background-color: gray;
+    padding: 0 33px;
 }
 
 p {
     font-size: 15px;
 }
 
+#top {
+    margin-top: 80px;
+}
+
 #top h1, #top p {
     text-align: center;
 }
 
+#top p {
+    /* width: 500px; */
+    width: 45%;
+    margin: auto;
+}
+
 .light {
     font-weight: lighter;
+}
+
+.second-heading {
+    margin-top: -20px;
 }
 
 .tools {
@@ -24,8 +37,10 @@ p {
 }
 
 .box {
-    width: 270px;
+    width: 290px;
     height: 250px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .box , .tools h2, .tools p, .tools .box img {
@@ -40,8 +55,13 @@ p {
 }
 #karma {
     border-top: 5px solid hsl(34, 97%, 64%);
-    margin-top: 10px;
+    margin-top: 25px;
 }
 #calculator {
     border-top: 5px solid hsl(212, 86%, 64%);
+}
+
+.tools img {
+    float: right;
+    margin-top: 10px;
 }
